infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: josedor.dev
      http:
        paths:
          - path: /api/v1/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: main-srv
                port:
                  number: 3000
          - path: /socket.io/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: io-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
